# moonpath

./: .gitignore  README.md  pyproject.toml
cli/: discover.py  play_radio.py  play_url.py  status.py
moonpath/: __init__.py  __main__.py  cli_app.py  connection_pool.py  controller.py  discovery.py  errors.py  json_api.py  models.py  service.py  telemetry.py
services/: moonpath.service
tests/: test_status.py
