[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "moonpath"
version = "0.1.0"
description = "Python library and CLI for Google Cast control"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyChromecast>=14.0,<15",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["moonpath*"]
